# strata

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  docker-compose.yml  fossil-strata-guide.md  notes-from-wyatt.md  village.sh
.git-crypt/keys/default/0/: E57DB0ED168EAEBBB66D55F4979FE995082818B1.gpg
.github/workflows/: ci.yml
agents/: board.js  echo.wat
dens/: anthropic.js  board.js  claud-homestead.js  claude-homestead.js  claude.js  claudette.js  den_engine_test.js  echo.c  echo.wat  gatekeeper.js  gee.js  gee2.js  gee3.js  inch.js  library.js  loom.js  parser_test.js  prolog_test.js  runtime_test.js
dens/lib/: den-engine.js  den-runtime.js
examples/: listener.c
include/strata/: aead.h  agent.h  bedrock.h  blob.h  change.h  context.h  den.h  json_util.h  msg.h  sandbox.h  schema.h  shamir.h  store.h  village.h  y8_ext.h
private/: config.json
scripts/: gen_js_embed.py
src/: aead.c  agent.c  anthropic.c  blob.c  change.c  cisco.c  cli_human_den.c  cli_strata.c  cli_strata_agent.c  cli_strata_den.c  cli_strata_homestead.c  cobbler.c  code_smith.c  context.c  den.c  messenger.c  msg.c  sandbox.c  schema.c  shamir.c  store.c  store_service.c  store_sqlite.c  village.c  warren_village.c
test/: test_agent.c  test_anthropic.c  test_blob.c  test_board.c  test_change.c  test_claud_homestead.c  test_claude.c  test_claude_homestead.c  test_cobbler.c  test_collaboration.c  test_den.c  test_messenger.c  test_reactive.c  test_reactive_prolog.c  test_shamir.c  test_solver.c  test_store.c  test_village.c
